--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Sun Sep 06 15:48:14 ART 2015
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=3ab37ea2a51dd03895da8433ee90cb6e
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.22\\bin
-configurations-xml=a21c30bc8408eac19eb428aecf727d2b
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=47805b5596804b87cda41e61096929be
-default.languagetoolchain.version=1.22
+#Wed Sep 07 21:27:16 ART 2016
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=a4339ad1785d500c83bd2a6dcba49f26
+default.languagetoolchain.dir=Z\:\\Program Files (x86)\\Microchip\\xc16\\v1.26\\bin
+configurations-xml=f65f66b589aab621e7f046830b040ecd
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=02b44c60b7ea0aab28d65f169487b894
+default.languagetoolchain.version=1.26
 host.platform=windows
 conf.ids=default
